(CORE-4434) Fade out the message-of-the-day once the user starts searching if we're a non-BI user, since the Find search bar has to go to the top and will take it's place (BIFHI users always have it visible). Resize the MOTD to fit on screen when the find-navbar is displayed. Prevent the MOTD from spilling outside of the title box. Tweak the settings box to make it use a 2-line full-width textbox rather han a textinput; since that looks nicer.

--- a/webapp/core/src/main/resources/less/components/navigation.less
+++ b/webapp/core/src/main/resources/less/components/navigation.less
@@ -61,9 +61,21 @@
 
 .find-navbar-motd {
   position: absolute;
-  width: 100%;
+  height: 100%;
   text-align: center;
   color: white;
+  left: 240px;
+  right: 160px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  // Overrides the normal fade transition speed from the 'fade' class
+  -webkit-transition: @transitAll;
+  -o-transition: @transitAll;
+  transition: @transitAll;
+}
+
+.hide-navbar .find-navbar-motd {
+  left: 160px;
 }
 
 .find-navbar .dropdown-toggle:hover,
